# game-making-library

./: .gitignore  CMakeLists.txt  Makefile  README.md  llgml.pc.in
.github/workflows/: release.yaml
cmake/: llgmlConfig.cmake.in
include/: camera.h  color.h  debug.h  delay.h  events.h  files.h  llgml.h  object_3d.h  polyhedra.h  print.h  render.h  shader.h  shapes.h  stl.h  window.h  windows_compat.h
include/internal/: object_3d.h
shaders/: normals.frag  perspective.vert  z.frag
src/: camera.c  color.c  debug.c  delay.c  events.c  files.c  object_3d.c  print.c  render.c  shader.c  stl.c  window.c  windows_compat.c
test/: Makefile  credits.md  main.c  teapot.stl
